--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ caption {
 
 }
   
-div.polaroid {
+.polaroid {
     width: 50%;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -90,7 +90,7 @@ div.polaroid {
     margin-right: auto;
 }
 
-div.container {
+.container {
     text-align: center;
     padding: 10px 20px;
     display: block;
