--- a/styles.css
+++ b/styles.css
@@ -98,3 +98,12 @@ caption {
     margin-right: auto;
     width: 50%;
 }
+
+.loading-bar {
+    width: 0%;
+    height: 4px;
+    background-color: #3498db;
+    margin-left: auto;
+    margin-right: auto;
+    transition: width 0.2s ease-in-out;
+  }
